--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ agp = "8.9.1"
 kotlin = "2.0.20"
 core-ktx = "1.15.0"
 kotlin-ksp = "2.0.20-1.0.25"
-coroutines = "1.9.0"
+coroutines = "1.10.1"
 serialization = "1.7.3"
 
 lifecycle-runtime-ktx = "2.8.7"
@@ -17,7 +17,6 @@ compose-bom = "2025.03.01"
 accompanist-compose = "0.30.1"
 
 material = "1.12.0"
-splashscreen = "1.0.1"
 appcompat = "1.7.0"
 
 androidx-hilt-compose-navigation = "1.2.0"
@@ -27,7 +26,7 @@ javax = "1"
 retrofit = "2.11.0"
 okhttp3-logging-interceptor = "4.12.0"
 
-coil = "2.6.0"
+coil = "3.1.0"
 
 timber = "5.0.1"
 
@@ -53,7 +52,6 @@ activity-compose = { group = "androidx.activity", name = "activity-compose", ver
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose" }
-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
@@ -68,8 +66,8 @@ compose-material = { group = "androidx.compose.material", name = "material" }
 accompanist-compose-placeholder = { group = "com.google.accompanist", name = "accompanist-placeholder-material", version.ref = "accompanist-compose" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
-coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
-coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+coil-network = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
 
 javax = {group = "javax.inject", name = "javax.inject", version.ref = "javax"}
 
